--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "framer-motion": "^11.0.24",
     "next": "^14.0.4",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
@@ -31,7 +33,9 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "styled-jsx-plugin-postcss": "^4.0.1",
-    "universal-cookie": "^7.0.1"
+    "tailwind-merge": "^2.2.2",
+    "universal-cookie": "^7.0.1",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
@@ -62,7 +66,6 @@
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "license": "ISC"
