fix and add images

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 APP_LINK=http://localhost:3000
 SITE_KEY_CAPTCHA=6LeOLFIpAAAAAHckrkw5Ee4EPKu1Tyu2ZESIiFGi
 SECRET_KEY_CAPTCHA=6LeOLFIpAAAAAMZHOJS171XG7HHzBAawIppPFTxn
+NEXT_NOTION_TOKEN=secret_5TouHN8sji4S8ICzWDwxko2oarrrshYUD06ioBoJohk
