--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@9gustin/react-notion-render": "^3.11.3",
+    "@notionhq/client": "^2.2.14",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
@@ -23,6 +25,7 @@
     "framer-motion": "^11.0.24",
     "next": "^14.0.4",
     "next-seo": "^6.4.0",
+    "notion-page-to-html": "^1.2.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
@@ -34,8 +37,8 @@
     "react-toastify": "^10.0.4",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "tailwind-merge": "^2.2.2",
-    "universal-cookie": "^7.0.1",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "universal-cookie": "^7.0.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
