--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.11",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^11.0.24",
@@ -28,6 +29,7 @@
     "notion-page-to-html": "^1.2.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
@@ -44,6 +46,7 @@
     "@next/bundle-analyzer": "^14.0.4",
     "@types/node": "^20.10.7",
     "@types/react": "^18.2.47",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
