--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-photo-album": "^2.3.1",
     "react-query": "^3.39.3",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
@@ -38,7 +39,8 @@
     "styled-jsx-plugin-postcss": "^4.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
-    "universal-cookie": "^7.0.1"
+    "universal-cookie": "^7.0.1",
+    "yet-another-react-lightbox": "^3.19.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
