--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "sharp": "^0.33.5",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
