--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ APP_LINK=http://localhost:4000
 SITE_KEY_CAPTCHA=6LeOLFIpAAAAAHckrkw5Ee4EPKu1Tyu2ZESIiFGi
 SECRET_KEY_CAPTCHA=6LeOLFIpAAAAAMZHOJS171XG7HHzBAawIppPFTxn
 NEXT_NOTION_TOKEN=secret_5TouHN8sji4S8ICzWDwxko2oarrrshYUD06ioBoJohk
+CLOUDINARY_CLOUD_NAME=dzj9hndxv
+CLOUDINARY_API_KEY=891794621143571
+CLOUDINARY_API_SECRET=N17Hhd5-HCKjV52PI33_0JrlapQ
